--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -11,4 +11,4 @@ set(gtest_force_shared_crt ON CACHE BOOL "Always use msvcrt.dll" FORCE)
 add_subdirectory("googletest")
 target_include_directories("test" SYSTEM PRIVATE "googletest/googletest/include")
 
-target_sources("installer" PRIVATE "miniz/miniz.c")
+target_sources("installer-win" PRIVATE "miniz/miniz.c")
