Fixed WIN_CONSOLE applications being skipped

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ foreach(INDEX RANGE ${TARGETS_LENGTH})
   if (${CONFIG} MATCHES "^WinMain$" AND WIN32)
     # Looks for int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, char* args, int nShowCmd)
     add_executable(${TARGET} WIN32)
-  elseif(NOT ${TARGET} MATCHES "^.*-win$")
+  elseif(NOT ${TARGET} MATCHES "^.*-win$" OR WIN32)
     # Looks for int main(int argc, char* argv[])
     add_executable(${TARGET})
     if (WIN32)
