--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ build
 *.log
 __pycache__
 temp
+*.pkl
 
 # Exclude the files in the bin folder except files in subfolders, i.e. runtime resources
 bin/*
