--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,5 @@
 cmake_minimum_required(VERSION 3.13)
 
-# Must use GNUInstallDirs to install libraries into correct
-# locations on all platforms.
-include(GNUInstallDirs)
-
 # Default to CMAKE_BUILD_TYPE = Release unless overridden on command line
 if( DEFINED CMAKE_BUILD_TYPE )
     set( CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE} CACHE STRING "Set to either \"Release\" or \"Debug\"" )
@@ -11,7 +7,21 @@ else()
     set( CMAKE_BUILD_TYPE Release CACHE STRING "Set to either \"Release\" or \"Debug\"" )
 endif()
 
+if(WIN32 AND NOT CMAKE_TOOLCHAIN_FILE)
+  message(FATAL_ERROR "CMAKE_TOOLCHAIN_FILE must be set, see vcpkg integrate install")
+endif()
+
 project("project-template" DESCRIPTION "A template repository for C++ projects")
+
+# Must use GNUInstallDirs to install libraries into correct
+# locations on all platforms.
+include(GNUInstallDirs)
+
+# 64 bit only
+# if(NOT CMAKE_SIZEOF_VOID_P EQUAL 8)
+#   message("Please switch to a x64 build")
+#   return()
+# endif()
 
 # Global setting: Use C++14
 set(CMAKE_CXX_STANDARD 14)
@@ -29,13 +39,16 @@ endif()
 # Allow target_sources to use relative paths
 cmake_policy(SET CMP0076 NEW)
 
+# Allow install CODE|SCRIPT to use generator expressions
+cmake_policy(SET CMP0087 NEW)
+
 # Output binaries to ./bin
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/bin")
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/bin")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/bin")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/output/debug")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/output/release")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/output/debug")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/output/release")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/output/debug")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/output/release")
 
 # Targets not included in the public distributable
 set (TARGETS_NODIST
@@ -124,6 +137,15 @@ foreach(INDEX RANGE ${TARGETS_LENGTH})
     $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>:-Wconversion>
     $<$<CXX_COMPILER_ID:MSVC>:/WX>
     $<$<CXX_COMPILER_ID:MSVC>:/W4>)
+
+  add_custom_command(TARGET ${TARGET} PRE_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+      ${CMAKE_SOURCE_DIR}/res/ $<TARGET_FILE_DIR:${TARGET}>)
+
+endforeach()
+
+foreach(TARGET ${TARGETS_NODIST})
+  set_target_properties(${TARGET} PROPERTIES EXCLUDE_FROM_ALL ON)
 endforeach()
 
 # Generate doxygen when building release type builds
@@ -142,36 +164,6 @@ add_custom_target(
   DEPENDS "${VERSION_DEPENDENCY}"
 )
 
-# Create an archive of the output files, ready to distribute
-set (ARCHIVE_FILES
-  "${CMAKE_SOURCE_DIR}/bin/include"
-)
-foreach(TARGET ${TARGETS_DIST})
-  list(APPEND ARCHIVE_FILES $<TARGET_FILE:${TARGET}>)
-endforeach()
-
-set (ARCHIVE_OUTPUT "${CMAKE_SOURCE_DIR}/bin/archive")
-
-if(WIN32)
-  add_custom_target(
-    "archive"
-    COMMAND ${CMAKE_COMMAND} -E tar "cfv" "${ARCHIVE_OUTPUT}.zip" --format=zip
-      ${ARCHIVE_FILES}
-    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
-    COMMENT "Generating archive of output files"
-    DEPENDS ${ARCHIVE_FILES}
-  )
-else()
-  add_custom_target(
-    "archive"
-    COMMAND ${CMAKE_COMMAND} -E tar "cfvz" "${ARCHIVE_OUTPUT}.tar.gz"
-      ${ARCHIVE_FILES}
-    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin"
-    COMMENT "Generating archive of output files"
-    DEPENDS ${ARCHIVE_FILES}
-  )
-endif()
-
 # Add support for Mingw RC compiler
 if(WIN32)
   enable_language(RC)
@@ -181,6 +173,60 @@ if(WIN32)
     set(CMAKE_RC_COMPILER_INIT windres)
     set(CMAKE_RC_COMPILE_OBJECT "<CMAKE_RC_COMPILER> <FLAGS> -O coff <DEFINES> -I${CMAKE_CURRENT_BINARY_DIR} -i <SOURCE> -o <OBJECT>")
   endif()
+endif()
+
+set(EXES "")
+
+foreach(TARGET ${TARGETS_DIST})
+  if (WIN32)
+    install(TARGETS ${TARGET}
+            RUNTIME DESTINATION .
+            LIBRARY DESTINATION lib
+            ARCHIVE DESTINATION .)
+    set(EXE $<TARGET_FILE:${TARGET}>)
+    list(APPEND EXES ${EXE})
+  else()
+    install(TARGETS ${TARGET}
+            RUNTIME DESTINATION bin
+            LIBRARY DESTINATION lib
+            ARCHIVE DESTINATION lib/static)
+  endif()
+endforeach()
+
+install(DIRECTORY "res" DESTINATION .)
+
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A template repository for C++ projects")
+set(CPACK_PACKAGE_VENDOR "Bradley Davis")
+set(CPACK_PACKAGE_CONTACT "Bradley Davis me@bradleydavis.tech")
+set(CPACK_PACKAGE_VERSION_MAJOR "0")
+set(CPACK_PACKAGE_VERSION_MINOR "1")
+set(CPACK_PACKAGE_VERSION_PATCH "1")
+
+set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "any")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "")
+
+if(WIN32)
+  set(CPACK_GENERATOR "ZIP")
+  set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
+  set(CPACK_PACKAGE_DIRECTORY "${CMAKE_SOURCE_DIR}")
+  set(CPACK_PACKAGE_FILE_NAME "archive")
+endif()
+
+include(CPack)
+
+if (WIN32)
+  install(CODE
+    "file(GET_RUNTIME_DEPENDENCIES
+            RESOLVED_DEPENDENCIES_VAR resolved_deps
+            UNRESOLVED_DEPENDENCIES_VAR unresolved_deps
+            EXECUTABLES ${EXES}
+            PRE_EXCLUDE_REGEXES \"api-ms.*\"
+            POST_INCLUDE_REGEXES \"${CMAKE_SOURCE_DIR}.*\"
+            POST_EXCLUDE_REGEXES \".*\"
+            )
+    file(COPY \${resolved_deps} DESTINATION \"${CPACK_PACKAGE_DIRECTORY}/_CPack_Packages/win32/ZIP/archive\")
+    file(INSTALL \${resolved_deps} DESTINATION \"${CMAKE_INSTALL_PREFIX}\")"
+  )
 endif()
 
 # CMake targets cannot have spaces, to have spaces in the output use the OUTPUT_NAME property
@@ -195,40 +241,6 @@ include_directories("include")
 # Add each subdirectory
 add_subdirectory("common")
 add_subdirectory("installer-win")
-add_subdirectory("bin")
 
 # Add each target subdirectory
 add_subdirectory("project-fractal")
-
-target_link_libraries("test" gtest)
-
-foreach(TARGET ${TARGETS})
-  get_target_property(EXCLUDED ${TARGET} EXCLUDE_FROM_ALL)
-  if (${EXCLUDED} STREQUAL "EXCLUDED-NOTFOUND")
-    if (WIN32)
-      install(TARGETS ${TARGET}
-              RUNTIME DESTINATION .
-              LIBRARY DESTINATION lib
-              ARCHIVE DESTINATION .)
-    else()
-      install(TARGETS ${TARGET}
-              RUNTIME DESTINATION bin
-              LIBRARY DESTINATION lib
-              ARCHIVE DESTINATION lib/static)
-    endif()
-  endif()
-endforeach()
-
-if(NOT WIN32)
-  set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A template repository for C++ projects")
-  set(CPACK_PACKAGE_VENDOR "Bradley Davis")
-  set(CPACK_PACKAGE_CONTACT "Bradley Davis me@bradleydavis.tech")
-  set(CPACK_PACKAGE_VERSION_MAJOR "0")
-  set(CPACK_PACKAGE_VERSION_MINOR "1")
-  set(CPACK_PACKAGE_VERSION_PATCH "1")
-
-  set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "any")
-  set(CPACK_DEBIAN_PACKAGE_DEPENDS "")
-
-  include(CPack)
-endif()
