--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -1,14 +1,15 @@
 set ( LIBRARY_INCLUDES
-  "spdlog/include"
   "miniz"
 )
 
+target_sources("installer-win" PRIVATE "miniz/miniz.c")
+
+find_package(spdlog CONFIG REQUIRED)
+
+find_package(GTest CONFIG REQUIRED)
+target_link_libraries("test" PRIVATE GTest::gtest)
+
 foreach(target ${TARGETS})
   target_include_directories(${target} SYSTEM PRIVATE ${LIBRARY_INCLUDES})
+  target_link_libraries(${target} PRIVATE spdlog::spdlog spdlog::spdlog_header_only)
 endforeach()
-
-set(gtest_force_shared_crt ON CACHE BOOL "Always use msvcrt.dll" FORCE)
-add_subdirectory("googletest")
-target_include_directories("test" SYSTEM PRIVATE "googletest/googletest/include")
-
-target_sources("installer-win" PRIVATE "miniz/miniz.c")
