--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -5,11 +5,16 @@ set ( LIBRARY_INCLUDES
 target_sources("installer-win" PRIVATE "miniz/miniz.c")
 
 find_package(spdlog CONFIG REQUIRED)
+find_package(fmt CONFIG REQUIRED)
 
 find_package(GTest CONFIG REQUIRED)
 target_link_libraries("test" PRIVATE GTest::gtest)
 
 foreach(target ${TARGETS})
   target_include_directories(${target} SYSTEM PRIVATE ${LIBRARY_INCLUDES})
-  target_link_libraries(${target} PRIVATE spdlog::spdlog spdlog::spdlog_header_only)
+  target_link_libraries(${target} PRIVATE spdlog::spdlog_header_only)
+  if(NOT BUILD_SHARED_LIBS OR ${target} STREQUAL "installer-win")
+    # Self extracting Windows installer always use static linking
+    target_link_libraries(${target} PRIVATE fmt::fmt-header-only)
+  endif()
 endforeach()
