--- a/project-library/CMakeLists.txt
+++ b/project-library/CMakeLists.txt
@@ -9,3 +9,9 @@ set (SRCS_WIN
 )
 
 target_sources("library" PRIVATE ${SRCS} $<IF:$<BOOL:${WIN32}>, ${SRCS_WIN}, ${SRCS_UNIX}>)
+
+set (TEST_SRCS
+  "library_test.cpp"
+)
+
+target_sources("gtester" PRIVATE ${TEST_SRCS} ${SRCS})
