Added Windows CI file and fixed shared library tests

--- a/project-library/CMakeLists.txt
+++ b/project-library/CMakeLists.txt
@@ -1,5 +1,8 @@
-set (SRCS
+set (SRCS_API
   "library.cpp"
+)
+
+set (SRCS
 )
 
 set (SRCS_UNIX
@@ -8,7 +11,7 @@ set (SRCS_UNIX
 set (SRCS_WIN
 )
 
-target_sources("library" PRIVATE ${SRCS} $<IF:$<BOOL:${WIN32}>, ${SRCS_WIN}, ${SRCS_UNIX}>)
+target_sources("library" PRIVATE ${SRCS} ${SRCS_API} $<IF:$<BOOL:${WIN32}>, ${SRCS_WIN}, ${SRCS_UNIX}>)
 
 set (TEST_SRCS
   "library_test.cpp"
