--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -46,7 +46,8 @@ jobs:
         with:
           vcpkgArguments: spdlog:x64-linux gtest:x64-linux
           vcpkgDirectory: ${{ runner.workspace }}/vcpkg/
-          vcpkgGitCommitId: 8e76503a769e153dad8f4e7b2c95a152bb35edaa
+          # vcpkg version 2020.11.1
+          vcpkgGitCommitId: 0bf3923f9fab4001c00f0f429682a0853b5749e0
           vcpkgTriplet: x64-windows
 
       - name: Build and Test
