Changed Linguist settings
ci skip

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 # Force LF checkout for all source files
 * text=auto eol=lf
+
+## Linguist settings
+# Ignore library files
+libraries/miniz/* linguist-vendored
